--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scenesters</title>
-    <script src="lib/phaser.js"></script>
+    <script src="lib/phaser360.js"></script>
+    <script src="src/scenes/Play.js"></script>
+    <script src="src/scenes/Menu.js"></script>
+    <script src="src/scenes/Pause.js"></script>
+    <script src="src/Button.js"></script>
+    <script src="src/scenes/Transition.js"></script>
     <script src="src/main.js"></script>
 </head>
 <body>
